[gd_scene load_steps=4 format=2]

[ext_resource path="res://TD/sprites/tower.png" type="Texture" id=1]
[ext_resource path="res://TD/tower.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 192.0

[node name="tower" type="Node2D"]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 32, 0 )
texture = ExtResource( 1 )

[node name="detection_area" type="Area2D" parent="."]

[node name="collision_shape" type="CollisionShape2D" parent="detection_area"]
position = Vector2( 32, 16 )
shape = SubResource( 1 )

[node name="attack_speed" type="Timer" parent="."]
autostart = true
[connection signal="area_entered" from="detection_area" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="detection_area" to="." method="_on_detection_area_area_exited"]
[connection signal="timeout" from="attack_speed" to="." method="_on_attack_speed_timeout"]
